Solutions to module two

--- a/02_python_algorithms/00_recap.ipynb
+++ b/02_python_algorithms/00_recap.ipynb
@@ -11,17 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dec01838-b647-4379-ace8-899eaac3fadb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85132c2a-779a-473c-973f-6e217386e1bb",
    "metadata": {},
    "outputs": [],
@@ -31,40 +43,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41abc578-5ae5-4ec0-b3e3-b061549565e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABC'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphabet[0:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b2871d23-206e-4081-b268-7a9f73e6a8b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'XYZ'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphabet[-3:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eb84f710-2458-4d3b-9db4-f063dddc48b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ACEGIKMOQSUWY'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alphabet[::2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d31fe125-50b9-4864-8250-b57aa04c5875",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HAPPY EASTER'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "message = (\n",
     "    alphabet[7] + \n",
@@ -85,10 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0d52e916-5284-4539-a15e-8b44e4a5575b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HAPPYHAPPYHAPPYHAPPYHAPPY'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "message[0:5] * 5"
    ]
@@ -111,11 +178,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "32f1eb87-44aa-4088-94df-7b0795a9e76e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 22, 24, 26, 28, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = []\n",
+    "for number in range (0,31):\n",
+    "    if number < 10 or number > 20:\n",
+    "        if number % 2 == 0:\n",
+    "            numbers.append(number)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2c526ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 22, 24, 26, 28, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Or using a list comprehension to simplify the loop and conditions:\n",
+    "numbers = [x for x in range(0, 31) if (x % 2 == 0) and (x < 10 or x > 20)]\n",
+    "print(numbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5fa57bf4-15c7-4c1c-b8b8-9f8770d74940",
    "metadata": {},
    "outputs": [],
@@ -137,18 +239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "120ba559-cd90-4a5d-8cac-75bac9779b04",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "counts = counts[1::2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3cccd1e0-6086-4cc7-9d54-2496aafb21bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(counts)"
    ]
@@ -170,11 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "22d54c94-b99f-4134-b145-bce74bf38750",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "en_de_dictionary = {\n",
+    "    \"Easter\":\"Ostern\",\n",
+    "    \"Egg\":\"Ei\",\n",
+    "    \"Happy\":\"Frohe\",\n",
+    "    \"Rabbit\":\"Hase\"\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "332bf359-21d2-4ede-aa02-fed798070de4",
    "metadata": {},
    "outputs": [],
@@ -196,11 +318,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "02c490c8-8445-49ec-94b8-709eb28500bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frohe Ostern \n"
+     ]
+    }
+   ],
+   "source": [
+    "translated_text = \"\"\n",
+    "\n",
+    "for key in text:\n",
+    "    translated_text += en_de_dictionary[key] + \" \"\n",
+    "    \n",
+    "print(translated_text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,11 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "572d862f-e1ab-4777-9b4c-727e131d9adf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frohe'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "en_de_dictionary[text[0]]"
+   ]
   }
  ],
  "metadata": {
@@ -235,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
