--- a/02_python_algorithms/07_Conditions.ipynb
+++ b/02_python_algorithms/07_Conditions.ipynb
@@ -350,7 +350,7 @@
     "    grade = 2\n",
     "elif percentage > 60:\n",
     "    grade = 3\n",
-    "elif percentag > 50:\n",
+    "elif percentage > 50:\n",
     "    grade = 4\n",
     "else:\n",
     "    grade = 5\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "hawaiian-bryan",
    "metadata": {},
    "outputs": [],
@@ -382,11 +382,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "biblical-style",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The time is 12:15 and it is: Afternoon\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 6 <= time_hours < 12:\n",
+    "    daytime = \"Morning\"\n",
+    "elif time_hours == 12 and time_minutes == 0:\n",
+    "    daytime = \"Noon\"\n",
+    "elif 12 <= time_hours <= 17:\n",
+    "    daytime = \"Afternoon\"\n",
+    "elif 17 < time_hours < 20:\n",
+    "    daytime = \"Evening\"\n",
+    "else:\n",
+    "    daytime = \"Night\"\n",
+    "\n",
+    "print(f\"The time is {time_hours}:{time_minutes} and it is: {daytime}\")"
+   ]
   }
  ],
  "metadata": {
@@ -405,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
