--- a/02_python_algorithms/10_Import_packages.ipynb
+++ b/02_python_algorithms/10_Import_packages.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "c5374a88-b2cf-4963-b076-616bfaeb6aff",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "952e16a1-9684-4867-9273-247ad6707eeb",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "-0.9999987317275395"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "f3ab4b68-d1a6-4708-aafb-a95c9efee4a8",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b19bb26d-d119-4120-8152-0336c949c069",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "-0.9999987317275395"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,12 +487,12 @@
    "source": [
     "### Specific functions\n",
     "\n",
-    "If we only need a specific function from a package, we can also just import it using the ```from``` statement. For examample if we want to only import the ```np.cos``` function above:"
+    "If we only need a specific function from a package, we can also just import it using the ```from``` statement. For example if we want to only import the ```np.cos``` function above:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "918ca0db-90e9-47b3-9c53-4652049843f1",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "8374d32d-7a48-43cb-ad55-b564f87cc2b4",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "-0.9999987317275395"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "5809f8eb-1a81-46d5-aaff-11c9e672ef47",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "79ddc559-52ac-4cc2-acaf-19d2ccc3c4a6",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "0.0015926529164868282"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
    "source": [
     "## Sub-modules\n",
     "\n",
-    "In larger packages like Numpy, some functions are directly accessible from the main package (like ```np.cos```) and others with more specialized tasks are grouped together by topic or domain into submodules. For example Numpy has a submodule dedicated to distributions called ```random```. All the points seen above are still valide here. \n",
+    "In larger packages like Numpy, some functions are directly accessible from the main package (like ```np.cos```) and others with more specialized tasks are grouped together by topic or domain into submodules. For example Numpy has a submodule dedicated to distributions called ```random```. All the points seen above are still valid here. \n",
     "\n",
     "We use the dot notation to access functions, but now need to also specify the submodule name. For example the ```normal``` function that generates numbers drawn from a normal distribution:"
    ]
@@ -738,6 +738,75 @@
     "- import just the ```norm``` function and call it\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5d04c23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.linalg.norm([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c7abe3a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy import linalg\n",
+    "\n",
+    "linalg.norm([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "70a78111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy.linalg import norm\n",
+    "\n",
+    "norm([1,2])"
+   ]
   }
  ],
  "metadata": {
@@ -756,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
