--- a/02_python_algorithms/08_loops.ipynb
+++ b/02_python_algorithms/08_loops.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the above code that is indented will only be excuted for the first given number (0) and continue until the last number (5) but not including it.\n",
+    "Note that the above code that is indented will only be executed for the first given number (0) and continue until the last number (5) but not including it.\n",
     "\n",
     "You can also loop over a range of numbers with a defined step, for example step 3:"
    ]
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One can also write that shorter. The underlying concept is called [generators](https://wiki.python.org/moin/Generators)."
+    "One can also write that shorter. The underlying concept is called [generators](https://wiki.python.org/moin/Generators), aka list comprehensions."
    ]
   },
   {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,10 +443,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset1.tif\n",
+      "dataset2.tif\n",
+      "blobs.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "for filename in file_names:\n",
+    "    if filename.endswith(\".tif\"):\n",
+    "        print(filename)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,10 +481,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[28.274333882308138, 706.8583470577034, 14102.609421964582, 3421.194399759285, 452.3893421169302, 201.06192982974676, 452.3893421169302, 254.46900494077323, 1520.53084433746]\n",
+      "[28.274333882308138, 706.8583470577034, 14102.609421964582, 3421.194399759285, 452.3893421169302, 201.06192982974676, 452.3893421169302, 254.46900494077323, 1520.53084433746]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>radius</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>28.274334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>706.858347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67</td>\n",
+       "      <td>14102.609422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>3421.194400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>452.389342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8</td>\n",
+       "      <td>201.061930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12</td>\n",
+       "      <td>452.389342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>254.469005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1520.530844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   radius          area\n",
+       "0       3     28.274334\n",
+       "1      15    706.858347\n",
+       "2      67  14102.609422\n",
+       "3      33   3421.194400\n",
+       "4      12    452.389342\n",
+       "5       8    201.061930\n",
+       "6      12    452.389342\n",
+       "7       9    254.469005\n",
+       "8      22   1520.530844"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import pandas as pd\n",
+    "\n",
+    "def c_area(radius):\n",
+    "    surface_area = math.pi * (pow(radius,2))\n",
+    "    return surface_area\n",
+    "\n",
+    "# First calculate areas and append them to an empty list (using a for loop)\n",
+    "areas = []\n",
+    "for radius in radii:\n",
+    "    area = c_area(radius)\n",
+    "    areas.append(area)\n",
+    "print (areas)\n",
+    "\n",
+    "# Alternatively you can use a list comprehension (this will overwrite the previous areas variable)\n",
+    "areas = [c_area(radius) for radius in radii]\n",
+    "print (areas)\n",
+    "\n",
+    "circles = {\n",
+    "    \"radius\": radii,\n",
+    "    \"area\": areas\n",
+    "}\n",
+    "pd.DataFrame(circles)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -489,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   },
   "toc": {
    "base_numbering": 1,
