--- a/02_python_algorithms/08a_list_files_in_a_folder.ipynb
+++ b/02_python_algorithms/08a_list_files_in_a_folder.ipynb
@@ -195,10 +195,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(image_file_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,10 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not_image_file_list = [file for file in file_list if not file.endswith(\".tif\")]\n",
+    "len(not_image_file_list)"
+   ]
   }
  ],
  "metadata": {
@@ -231,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   },
   "toc": {
    "base_numbering": 1,
