--- a/02_python_algorithms/09_custom_functions.ipynb
+++ b/02_python_algorithms/09_custom_functions.ipynb
@@ -287,7 +287,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Squares a number by multiplying it with itself  and returns its result.\n",
+      "    Squares a number by multiplying it with itself and returns its result.\n",
       "    \n"
      ]
     }
@@ -309,16 +309,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0msquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m Squares a number by multiplying it with itself  and returns its result.\n",
-       "\u001b[0;31mFile:\u001b[0m      /var/folders/p1/6svzckgd1y5906pfgm71fvmr0000gn/T/ipykernel_11914/1507435947.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature:\u001b[0m \u001b[0msquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDocstring:\u001b[0m Squares a number by multiplying it with itself and returns its result.\n",
+      "\u001b[1;31mFile:\u001b[0m      c:\\users\\albertds\\appdata\\local\\temp\\ipykernel_16996\\2780286315.py\n",
+      "\u001b[1;31mType:\u001b[0m      function"
+     ]
     }
    ],
    "source": [
@@ -377,10 +375,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def grade_students (number_of_points_in_exam, number_of_total_points_in_exam):\n",
+    "    percentage = (number_of_points_in_exam * 100) / number_of_total_points_in_exam\n",
+    "    if percentage >= 95:\n",
+    "        grade = 1\n",
+    "    elif 80 <= percentage < 95:\n",
+    "        grade = 2\n",
+    "    elif 60 <= percentage < 80:\n",
+    "        grade = 3\n",
+    "    elif 50 <= percentage < 60:\n",
+    "        grade = 4\n",
+    "    else:\n",
+    "        grade = 5\n",
+    "    return grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Final Grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Points  Final Grade\n",
+       "0      15            4\n",
+       "1      25            2\n",
+       "2      29            1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "total_points_exam = 30\n",
+    "exam_points = [15, 25, 29]\n",
+    "final_grades = []\n",
+    "\n",
+    "for points in exam_points:\n",
+    "    final_grades.append(grade_students(points,total_points_exam))\n",
+    "\n",
+    "score = {\n",
+    "    \"Points\": exam_points,\n",
+    "    \"Final Grade\": final_grades\n",
+    "}\n",
+    "pd.DataFrame(score)"
+   ]
   }
  ],
  "metadata": {
@@ -399,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   },
   "toc": {
    "base_numbering": 1,
