Small fixes to image processing notebooks

--- a/03_image_processing/04_Brightness_and_Contrast.ipynb
+++ b/03_image_processing/04_Brightness_and_Contrast.ipynb
@@ -37,7 +37,7 @@
    "id": "9c5cc83f-eebc-48c6-9075-eb54bb8389fd",
    "metadata": {},
    "source": [
-    "The `cells3d` dataset is a 4D-image. Using array-acces we extract a single 2D slice and show it."
+    "The `cells3d` dataset is a 4D-image. Using array-access we extract a single 2D slice and show it."
    ]
   },
   {
